exports[`test adds a new gif when clicking add button 1`] = `
<Component
  GifsStore={
    GifsStore {
      "gifs": Array [
        Object {
          "images": Object {
            "fixed_width": Object {
              "url": "gif-url.gif",
            },
          },
        },
      ],
    }
  }>
  <div
    className="App">
    <div>
      <styled.a
        onClick={[Function]}
        style={
          Object {
            "backgroundImage": "url(gif-url.gif)",
          }
        }>
        <a
          className="juSYaJ"
          onClick={[Function]}
          style={
            Object {
              "backgroundImage": "url(gif-url.gif)",
            }
          } />
      </styled.a>
    </div>
    <div
      style={
        Object {
          "clear": "both",
        }
      }>
      <styled.button
        id="add"
        onClick={[Function]}
        primary={true}
        style={
          Object {
            "margin": 0,
          }
        }>
        <button
          className="kioqWX"
          id="add"
          onClick={[Function]}
          style={
            Object {
              "margin": 0,
            }
          }>
          Add Gif
        </button>
      </styled.button>
      <styled.button
        id="removeLast"
        onClick={[Function]}>
        <button
          className="iOiCLo"
          id="removeLast"
          onClick={[Function]}>
          Remove Last
        </button>
      </styled.button>
    </div>
  </div>
</Component>
`;

exports[`test should render no gifs 1`] = `
<Component
  GifsStore={
    GifsStore {
      "gifs": Array [],
    }
  }>
  <div
    className="App">
    <div />
    <div
      style={
        Object {
          "clear": "both",
        }
      }>
      <styled.button
        id="add"
        onClick={[Function]}
        primary={true}
        style={
          Object {
            "margin": 0,
          }
        }>
        <button
          className="kioqWX"
          id="add"
          onClick={[Function]}
          style={
            Object {
              "margin": 0,
            }
          }>
          Add Gif
        </button>
      </styled.button>
      <styled.button
        id="removeLast"
        onClick={[Function]}>
        <button
          className="iOiCLo"
          id="removeLast"
          onClick={[Function]}>
          Remove Last
        </button>
      </styled.button>
    </div>
  </div>
</Component>
`;

exports[`test should render one gif 1`] = `
<Component
  GifsStore={
    GifsStore {
      "gifs": Array [
        Object {
          "images": Object {
            "fixed_width": Object {
              "url": "gif-url.gif",
            },
          },
        },
      ],
    }
  }>
  <div
    className="App">
    <div>
      <styled.a
        onClick={[Function]}
        style={
          Object {
            "backgroundImage": "url(gif-url.gif)",
          }
        }>
        <a
          className="juSYaJ"
          onClick={[Function]}
          style={
            Object {
              "backgroundImage": "url(gif-url.gif)",
            }
          } />
      </styled.a>
    </div>
    <div
      style={
        Object {
          "clear": "both",
        }
      }>
      <styled.button
        id="add"
        onClick={[Function]}
        primary={true}
        style={
          Object {
            "margin": 0,
          }
        }>
        <button
          className="kioqWX"
          id="add"
          onClick={[Function]}
          style={
            Object {
              "margin": 0,
            }
          }>
          Add Gif
        </button>
      </styled.button>
      <styled.button
        id="removeLast"
        onClick={[Function]}>
        <button
          className="iOiCLo"
          id="removeLast"
          onClick={[Function]}>
          Remove Last
        </button>
      </styled.button>
    </div>
  </div>
</Component>
`;
